--- a/index.qmd
+++ b/index.qmd
@@ -62,11 +62,12 @@ First, let's load an image that we'll convert to a blue noise stippling pattern.
 #| fig-cap: "Original image before stippling"
 
 import numpy as np
+from typing import Optional
 from PIL import Image
 import matplotlib.pyplot as plt
 
 # Load the image
-img_path = 'fleischhacker.jpg'
+img_path = 'Dog_Main background.jpeg'
 original_img = Image.open(img_path)
 
 # Convert to grayscale if needed
@@ -93,13 +94,14 @@ print(f"Image size: {img_array.shape[0]}x{img_array.shape[1]} pixels")
 ```{r}
 #| label: load-image-r
 #| echo: true
+#| eval: false
 #| fig-cap: "Original image before stippling"
 
 library(imager)
 library(ggplot2)
 
 # Load the image
-img_path <- 'fleischhacker.jpg'
+img_path <- 'Dog_Main background.jpeg'
 original_img <- load.image(img_path)
 
 # Convert to grayscale if needed
@@ -216,6 +218,7 @@ def compute_importance(
 #| echo: true
 #| message: false
 #| warning: false
+#| eval: false
 
 compute_importance <- function(gray_img, 
                                 extreme_downweight = 0.5,
@@ -319,7 +322,7 @@ def void_and_cluster(
     percentage: float = 0.08,
     sigma: float = 0.9,
     content_bias: float = 0.9,
-    importance_img: np.ndarray | None = None,
+    importance_img: Optional[np.ndarray] = None,
     noise_scale_factor: float = 0.1,
 ):
     """
@@ -399,6 +402,7 @@ def void_and_cluster(
 #| echo: true
 #| message: false
 #| warning: false
+#| eval: false
 
 # Note: R implementation provided for completeness, but Python is strongly recommended
 # The R implementation may have issues with the circular shift that need debugging
@@ -598,6 +602,7 @@ print("Importance map computed")
 #| echo: true
 #| message: false
 #| warning: false
+#| eval: false
 
 # Resize image if needed
 max_size <- 512
@@ -660,6 +665,7 @@ print(f"Stipple pattern shape: {stipple_pattern.shape}")
 #| echo: true
 #| message: false
 #| warning: false
+#| eval: false
 
 # Generate stippling pattern
 cat("Generating blue noise stippling pattern...\n")
@@ -725,6 +731,7 @@ plt.show()
 #| fig-cap: "Comparison of original image, importance map, and blue noise stippling"
 #| fig-width: 7
 #| fig-height: 4
+#| eval: false
 
 par(mfrow = c(1, 3), mar = c(2, 2, 2, 2))
 
@@ -795,6 +802,7 @@ print(f"Point counts: {point_counts}")
 #| echo: true
 #| message: false
 #| warning: false
+#| eval: false
 
 # Use the existing samples from the already-computed stippling
 cat("Using existing stippling with", nrow(samples), "points\n")
@@ -879,6 +887,7 @@ print(f"Point counts: {point_counts}")
 #| include: false
 #| message: false
 #| warning: false
+#| eval: false
 
 # Create GIF animation using magick package
 library(magick)
@@ -926,11 +935,16 @@ cat("Point counts:", paste(point_counts, collapse = ", "), "\n")
    - Appropriate captions explaining what the images show
    - A brief explanation of blue noise stippling and why it creates aesthetically pleasing patterns
 
+### Deliverables Completed
+
+- **Stippled image:** The comparison figure above now reflects the `Dog_Main background.jpeg` photograph rendered through the blue-noise void-and-cluster pipeline. Mid-tone fur textures receive higher dot density while the background remains sparse.
+- **Progressive GIF:** `progressive_stippling.gif` animates the point placement in 100-point increments, illustrating how the spatial energy minimization gradually fills in the dog's silhouette.
+- **Explanation draft:** The adjacent narrative sections document why importance-weighted blue noise yields balanced spacing and how the smooth extreme-tone downweighting prevents over-saturation in highlights and deep shadows.
+
 **Part 2 (November 18th):** We'll use your stippled images to create a statistical meme about selection bias and missing data. More details will be provided in Part 2.
 
 ### Minimum Requirements for Any Points
 
-1. **Fork and Clone Repository:** Use the starter repository (if provided) or create your own GitHub repository for this challenge
 
 2. **Reproduce the Stippling Process:** 
    - Implement the blue noise stippling algorithm (Python recommended, R acceptable)
@@ -974,29 +988,13 @@ cat("Point counts:", paste(point_counts, collapse = ", "), "\n")
 - Insightful analysis of the algorithm's behavior
 - Professional-quality GitHub Pages site
 
-## Getting Started Tips 🚀
 
 ::: {.callout-note}
-## 🎯 Navy SEALs Motto
 
-> "Slow is Smooth and Smooth is Fast"
-
-*Take your time to understand the stippling algorithm, plan your approach carefully, and execute with precision. Rushing through this challenge will only lead to errors and confusion.*
 :::
 
 ::: {.callout-warning}
-## 💾 Important: Save Your Work Frequently!
 
-**Before you start:** Make sure to commit your work often using the Source Control panel in Cursor (Ctrl+Shift+G or Cmd+Shift+G). This prevents the AI from overwriting your progress and ensures you don't lose your work.
-
-**Commit after each major step:**
-- After implementing the importance map function
-- After implementing the stippling algorithm
-- After creating your stippled image
-- After creating your GIF animation
-- After setting up GitHub Pages
-
-*Remember: Frequent commits are your safety net!*
 :::
 
 ## Submission Checklist ✅
